--- a/greenery/dbt_project.yml
+++ b/greenery/dbt_project.yml
@@ -35,3 +35,8 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+
+    staging:
+      +materialized: view
+      # +post-hook:
+        # - "GRANT SELECT ON {{this}} TO role REPORTING"
