--- a/greenery/models/staging/postgres/_postgres__models.yml
+++ b/greenery/models/staging/postgres/_postgres__models.yml
@@ -13,7 +13,7 @@ models:
       - name: address_id
         tests: 
           - not_null
-      - name: created_at
+      - name: created_at_utc
         tests: 
           - not_null
       - name: status
@@ -47,55 +47,55 @@ models:
         tests: 
           - not_null
 
-      - name: stg_postgres__events
-        columns:
-          - name: event_id
-            tests:
-              - not_null
-              - unique
-          - name: session_id
-            tests:
-              - not_null
-          - name: user_id
-            tests:
-              - not_null
-          - name: event_type
-            tests:
-              - not_null
-              - accepted_values:
-                  values: ['add_to_cart', 'checkout', 'package_shipped', 'page_view']
-          - name: page_url
-            tests:
-              - not_null
-          - name: created_at
-            tests:
-              - not_null
+  - name: stg_postgres__events
+    columns:
+      - name: event_id
+        tests:
+          - not_null
+          - unique
+      - name: session_id
+        tests:
+          - not_null
+      - name: user_id
+        tests:
+          - not_null
+      - name: event_type
+        tests:
+          - not_null
+          - accepted_values:
+              values: ['add_to_cart', 'checkout', 'package_shipped', 'page_view']
+      - name: page_url
+        tests:
+          - not_null
+      - name: created_at_utc
+        tests:
+          - not_null
 
-      - name: stg_postgres__order_items
-        columns:
-          - name: order_id
-            tests:
-              - not_null
-          - name: product_id
-            tests:
-              - not_null
-          - name: quantity
-            tests:
-              - not_null
-              - positive_values
+  - name: stg_postgres__order_items
+    columns:
+      - name: order_id
+        tests:
+          - not_null
+      - name: product_id
+        tests:
+          - not_null
+      - name: quantity
+        tests:
+          - not_null
+          - positive_values
 
-      - name: stg_postgres__products
-        columns:
-          - name: product_id
-            tests:
-              - not_null
-              - unique
-          - name: name
-            tests:
-              - not_null
-          - name: price
-            tests:
-              - not_null
-          - name: inventory
-            tests:
-              - not_null
+  - name: stg_postgres__products
+    columns:
+      - name: product_id
+        tests:
+          - not_null
+          - unique
+      - name: name
+        tests:
+          - not_null
+      - name: price
+        tests:
+          - not_null
+      - name: inventory
+        tests:
+          - not_null
